--- a/src/app/components/searchlegislators/searchlegislators.component.html
+++ b/src/app/components/searchlegislators/searchlegislators.component.html
@@ -46,9 +46,9 @@
         [ngClass]="{ 'btn-legis btn-legis-select': congressData, 'btn-legis btn-secondary': !congressData  }">Find</button>
     </div>
   </div> -->
-  <div *ngIf="address && !registration">
+  <div *ngIf="searchAddress && !registration">
     <div class="locationText">
-      Data based on the location <strong>{{address}}</strong>
+      Data based on the location <strong>{{searchAddress}}</strong>
     </div>
   </div>
 
