New UI design implementation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
                     <li><a href="#"><i class="ti-power-off"></i>Logout</a></li>
                     <li class="active">
                         <!-- <input type="text" class="form-control" placeholder="Search Legislator, Person, District, Party..."> -->
-                        <app-gps-global-search   from="commonSearch" (valueSelect)='selectEvent($event)' category="all" [inputvalue]=""></app-gps-global-search>
+                        <app-gps-global-search placeholder="Search Legislator, Person, District, Party..." from="commonSearch" (valueSelect)='selectEvent($event)' category="all" [inputvalue]=""></app-gps-global-search>
 
                     </li>
                 </ul>
