--- a/src/app/components/user/user/user3.component.html
+++ b/src/app/components/user/user/user3.component.html
@@ -11,7 +11,6 @@
     <img src="assets/img/can-2.png" class="img-avater" alt="" />
     <a class="edit-icon" href="#"><i class="fa fa-camera"></i></a>
 </div>
-{{userData}}
 <div class="profile-name">
     <h4>{{userData.displayName}}</h4>
     <span>user4a@gmail.com</span>
@@ -104,9 +103,11 @@
 											
 											<div class="col-md-12">
 												<div class="form-group" style="margin: 0px;">
-													<input type="text" class="form-control" placeholder="Search User Name" id="search"> <i class="vsearch-icon fa fa-search"></i>
+													<app-gps-global-search placeholder="Search User Name"  from="user" category="managedby" (valueSelect)='selectedUser($event)'></app-gps-global-search>
+
+													<!-- <input type="text" class="form-control" placeholder="Search User Name" id="search"> <i class="vsearch-icon fa fa-search"></i> -->
 												</div>
-												<div class="segestions" style="display: none;">
+												<!-- <div class="segestions">
 												    <div class="seggestion-headeing">
 												        <div class="recent-search">
 												            <p>Recent Seraches</p>
@@ -195,7 +196,7 @@
 												    </a>
 												    </li>
 												    </ul>
-												</div>
+												</div> -->
 											</div>
 											
 										</div>
