--- a/src/styles.css
+++ b/src/styles.css
@@ -10343,20 +10343,20 @@ input:focus {
     .banner-caption {
         margin-top: 120px;
     }
-
+/* 
     .news-div{
         margin-top: 5%;
         margin-left: 15%;
         width: 70%;
-    }
+    } */
 }
 
 
 @media only screen and (min-width: 768px){
-    h3 {
+    /* h3 {
         font-size: 40px !important;
         line-height: 36px;
-    }
+    } */
     h2 {
         font-size: 36px;
         line-height: 48px;
